weekly_notes/week7/k8sdemo/ingress/demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: helloapp
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: 8867205331/dockerhub:demoservice
        ports:
        - containerPort: 8080
        #imagePullPolicy: Never
        # livenessProbe:
        # readinessProbe:
