weekly_notes/week7/k8sdemo/ingress/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: helloapp
spec:
  selector:
    app: demo
  ports:
    - name: http
      protocol : TCP
      port: 80
      targetPort: 8080
  type: NodePort
